<resources>
    <string name="config_button_apply">Apply</string>
    <string name="config_section_features">At a glance</string>
    <string name="config_section_weather">Weather settings</string>
    <string name="config_section_settings_plus">Additional settings</string>
    <string name="config_section_settings_units">Units</string>
    <string name="config_section_about">About</string>
    <string name="config_section_style">Appearance</string>
    <string name="config_widget_style">Widget style</string>
    <string name="config_widget_style_classic">Transparent</string>
    <string name="config_widget_style_solid">Solid</string>
    <string name="config_weather_switch">Weather</string>
    <string name="config_birthday_switch">Birthdays</string>
    <string name="config_birthday_switch_summary">Show birthdays from your contacts</string>
    <string name="config_contact_perm_alert_title">Contacts permission required</string>
    <string name="config_contact_perm_alert_message">To show birthdays, this app requires access to your contacts.</string>
    <string name="config_version_title">Build number</string>
    <string name="config_show_alarms">Alarms</string>
    <string name="config_show_alarms_descr">Show upcoming alarms</string>
    <string name="config_perm_alarm">Always show alarm icon</string>
    <string name="config_perm_alarm_descr">Quick access to the alarm app</string>
    <string name="config_debug_info">App status</string>
    <string name="config_debug_weather_data_age">Weather data age</string>
    <string name="config_debug_last_valid_location">Last valid location</string>
    <string name="config_debug_last_work_status">Last work status</string>
    <string name="config_debug_background_service">Background service</string>
    <string name="config_location_fallback">Use last location</string>
    <string name="config_location_fallback_summary">When the device location service is turned off</string>
    <string name="config_fixed_location">Weather location</string>
    <string name="config_fixed_location_summary_fixed">Fixed: %1$s</string>
    <string name="config_fixed_location_search_hint">Search for a place</string>
    <string name="config_fixed_location_search_button">Search</string>
    <string name="config_fixed_location_search_too_short">Type at least 2 characters.</string>
    <string name="config_fixed_location_search_empty">No places found.</string>
    <string name="config_fixed_location_search_error">Search failed. Check your internet connection.</string>
    <string name="config_fixed_location_coordinates_title">Or enter coordinates</string>
    <string name="config_fixed_location_lat_hint">Latitude</string>
    <string name="config_fixed_location_long_hint">Longitude</string>
    <string name="config_fixed_location_name_hint">Name (optional)</string>
    <string name="config_fixed_location_coordinates_error">Enter a latitude from -90 to 90 and a longitude from -180 to 180.</string>
    <string name="config_fixed_location_privacy_note">The text you search for is sent to Open-Meteo. A fixed location does not need any location permission.</string>
    <string name="config_fixed_location_button_use_coordinates">Use coordinates</string>
    <string name="config_icon_style">Icon style</string>
    <string name="config_text_color">Text color</string>
    <string name="config_icon_color">Icon color</string>
    <string name="config_color_light">Light</string>
    <string name="config_color_dark">Dark</string>
    <string name="config_icon_color_morning">Morning sun</string>
    <string name="config_icon_color_evening">Evening sun</string>
    <string name="config_option_auto">Automatic</string>
    <string name="config_option_follow_system">System default</string>
    <string name="config_temp">Temperature</string>
    <string name="config_unit_system">Measurement system</string>
    <string name="config_unit_metric">Metric</string>
    <string name="config_unit_us">United States</string>
    <string name="config_unit_uk">United Kingdom</string>
    <string name="config_daily_forecast">Show daily forecast</string>
    <string name="config_daily_forecast_summary">In the morning and evening</string>
    <string name="config_weather_warnings">Show weather alerts</string>
    <string name="config_weather_warnings_summary">For severe weather conditions within the hour</string>
    <string name="config_loc_perm_alert_title">Location permission required</string>
    <string name="config_loc_perm_alert_message">To show the weather for your current area, this app requires access to your location.</string>
    <string name="config_bg_perm_alert_title">Background location permission</string>
    <string name="config_bg_perm_alert_message">Reliable weather updates require to access your location in the background. Please select \"%s\" in the next screen.</string>
    <string name="config_alert_button_ok">OK</string>
    <string name="config_alert_button_cancel">Cancel</string>
    <string name="config_debug_button_weather">View weather query</string>
    <string name="config_debug_button_location">View location</string>
    <string name="config_source_code">Source code</string>
    <string name="config_source_code_summary">View source code and documentation on GitHub</string>
    <string name="config_aux_view_nothing">No details</string>
    <string name="config_aux_view_place_condition">Place &amp; condition</string>
    <string name="config_aux_view_update_time">Refresh time</string>
    <string name="config_aux_view_title">Show details</string>
    <string name="config_weather_app">Weather app</string>
    <string name="config_weather_app_nil">Not listed</string>
    <string name="config_weather_app_nil_alert_message">To have your weather app added, please open an issue on GitHub.</string>
    <string name="config_weather_app_alert_button_github">Open GitHub</string>
    <string name="widget_label">Date, weather &amp; more</string>
    <string name="widget_date_format">EEE, MMM d</string>
    <string name="widget_date_prev">Sun, Jul 4</string>
    <string name="widget_temp_prev">71\u2109</string>
    <string name="widget_weather_prev">Tomorrow 67\u00B0 / 52\u00B0 · Light rain</string>
    <string name="widget_today">Today</string>
    <string name="widget_tomorrow">Tomorrow</string>
    <string name="widget_updated_at">Refreshed</string>
    <string name="app_attribution_open_meteo">Weather data by Open-Meteo.com</string>
    <string name="app_text_now">Now</string>
    <string name="app_text_hourly_forecast">Hourly forecast</string>
    <string name="app_text_daily_forecast">Daily forecast</string>
    <string name="app_text_current_conditions">Current conditions</string>
    <string name="app_text_feels_like">Feels like</string>
    <string name="app_text_pressure_high">High</string>
    <string name="app_text_pressure_low">Low</string>
    <string name="app_text_max_temp">High</string>
    <string name="app_text_min_temp">Low</string>
    <string name="app_text_title_wind">Wind</string>
    <string name="app_text_gusts">Gusts</string>
    <string name="app_text_dew_point">Dew point</string>
    <string name="app_text_humidity">Humidity</string>
    <string name="app_text_uv_index">UV index</string>
    <string name="app_text_pressure">Pressure</string>
    <string name="app_text_no_data">No weather data available</string>
    <string name="app_text_weather_off">Weather disabled</string>
    <string name="app_text_enable_in_settings">Enable weather in widget settings</string>
    <string name="app_text_check_connection">Check your connection and try again</string>
    <string name="app_text_button_try_again">Try again</string>
    <string name="app_text_button_settings">Widget settings</string>
    <string name="app_text_rain">Rain</string>
    <string name="app_text_hourly_details">Hourly details</string>
    <string name="app_text_sunset_sunrise">Sunrise &amp; sunset</string>
    <string name="app_text_sunrise">Sunrise</string>
    <string name="app_text_sunset">Sunset</string>
    <string name="app_text_evening">Evening</string>
    <string name="app_text_morning">Morning</string>
    <string name="app_today_total">Today\'s total</string>
    <string name="app_today_average">Today\'s average</string>
    <string name="app_today_maximum">Today\'s maximum</string>
    <string name="mu_0_1_2">Low</string>
    <string name="mu_3_4_5">Moderate</string>
    <string name="mu_6_7">High</string>
    <string name="mu_8_9_10">Very high</string>
    <string name="mu_11">Extreme</string>
    <string name="wc_heavy_thunderstorms">Heavy thunderstorms</string>
    <string name="wc_thunderstorm">Thunderstorm</string>
    <string name="wc_freezing_rain">Freezing rain</string>
    <string name="wc_light_freezing_rain">Light freezing rain</string>
    <string name="wc_freezing_drizzle">Freezing drizzle</string>
    <string name="wc_heavy_rain_showers">Heavy rain showers</string>
    <string name="wc_rain_showers">Rain showers</string>
    <string name="wc_light_rain_showers">Light rain showers</string>
    <string name="wc_heavy_snow_showers">Heavy snow showers</string>
    <string name="wc_light_snow_showers">Light snow showers</string>
    <string name="wc_heavy_rain">Heavy rain</string>
    <string name="wc_rain">Rain</string>
    <string name="wc_light_rain">Light rain</string>
    <string name="wc_drizzle">Drizzle</string>
    <string name="wc_heavy_snow">Heavy snow</string>
    <string name="wc_snow">Snow</string>
    <string name="wc_light_snow">Light snow</string>
    <string name="wc_snow_grains">Snow grains</string>
    <string name="wc_fog">Foggy</string>
    <string name="wc_overcast">Cloudy</string>
    <string name="wc_mostly_cloudy">Mostly cloudy</string>
    <string name="wc_partly_cloudy_day">Partly sunny</string>
    <string name="wc_partly_cloudy_night">Partly cloudy</string>
    <string name="wc_mainly_clear_day">Mostly sunny</string>
    <string name="wc_mainly_clear_night">Mostly clear</string>
    <string name="wc_clear_sky_day">Sunny</string>
    <string name="wc_clear_sky_night">Clear</string>
    <string name="warn_no_warning">No warnings</string>
    <string name="warn_uv_severe">Severe UV warning</string>
    <string name="warn_uv_extreme">Extreme UV warning</string>
    <string name="warn_heat_severe">Excessive heat warning</string>
    <string name="warn_heat_extreme">Extreme heat warning</string>
    <string name="warn_rain_severe">Excessive rain warning</string>
    <string name="warn_rain_extreme">Extreme rain warning</string>
    <string name="warn_gusts_severe">Severe wind gust warning</string>
    <string name="warn_gusts_extreme">Extreme wind gust warning</string>
    <string name="warn_tstorm_severe">Severe thunderstorm warning</string>
    <string name="warn_tstorm_extreme">Extreme thunderstorm warning</string>
    <plurals name="days">
        <item quantity="one">1 day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="app_name" translatable="false">Pimi widget</string>
    <string name="config_icon_style_filled" translatable="false">Twinkle Shadow</string>
    <string name="config_icon_style_outlined" translatable="false">Flat Sketch</string>
    <string name="config_debug_alert_status_time" translatable="false">%1$s (%2$s)</string>
    <string name="config_temp_celsius" translatable="false">Celsius</string>
    <string name="config_temp_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="unit_celsius" translatable="false">\u2103</string>
    <string name="unit_fahrenheit" translatable="false">\u2109</string>
    <string name="unit_degree" translatable="false">\u00B0</string>
</resources>