<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="category_features"
        android:selectable="false"
        android:title="@string/config_section_features"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <SwitchPreferenceCompat
            android:key="weather_switch"
            android:summary="@string/app_attribution_open_meteo"
            android:title="@string/config_weather_switch"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="birthday_switch"
            android:summary="@string/config_birthday_switch_summary"
            android:title="@string/config_birthday_switch"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="alarm_switch"
            android:summary="@string/config_show_alarms_descr"
            android:title="@string/config_show_alarms"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_weather"
        android:selectable="false"
        android:title="@string/config_section_weather"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <Preference
            android:key="fixed_location"
            android:title="@string/config_fixed_location"
            android:summary="@string/config_fixed_location_search_hint"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:key="weather_warnings"
            android:title="@string/config_weather_warnings"
            android:summary="@string/config_weather_warnings_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:key="daily_forecast"
            android:title="@string/config_daily_forecast"
            android:summary="@string/config_daily_forecast_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="weather_app_default"
            android:entries="@array/weather_apps"
            android:entryValues="@array/weather_apps_vals"
            android:key="weather_app_list"
            android:title="@string/config_weather_app"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_style"
        android:selectable="false"
        android:title="@string/config_section_style"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <ListPreference
            android:defaultValue="widget_style_solid"
            android:entries="@array/widget_styles"
            android:entryValues="@array/widget_styles_vals"
            android:key="widget_style_list"
            android:title="@string/config_widget_style"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="icon_style_filled"
            android:entries="@array/icon_styles"
            android:entryValues="@array/icon_styles_vals"
            android:key="icon_style_list"
            android:title="@string/config_icon_style"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_about"
        android:selectable="false"
        android:title="@string/config_section_about"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <Preference
            android:key="source_code"
            android:summary="@string/config_source_code_summary"
            android:title="@string/config_source_code"
            app:iconSpaceReserved="false" />

        <com.kolakek.pimiwidget.settings.LongPressPreference
            android:key="build_number"
            android:title="@string/config_version_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>